--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,8 @@
  .card {
    background-color: hsla(224.1, 53.1%, 87.5%, 0.11);
    border: 1px solid;
-   width: 363px;
+   width: 100%;
+   max-width: 380px;
    box-shadow: 0 0px 13px black;
    /* position: relative; */
    /* width: clamp(280px, 90vw, 380px); */
@@ -62,7 +63,8 @@
    border-radius: 20px;
    /* box-shadow: var(--shadow); */
    overflow: hidden;
-   height: 510px;
+   padding-bottom: 20px;
+   /* height: 510px; */
  }
 
  .card__header {
@@ -209,3 +211,9 @@
      transition: none !important;
    }
  }
+ @media (max-width: 768px) {
+   .card {
+     max-width: 100%;
+     padding: 1rem;
+   }
+}
